--- a/Springboot_Redis/src/main/resources/application.yaml
+++ b/Springboot_Redis/src/main/resources/application.yaml
@@ -3,3 +3,9 @@ spring:
     host: 127.0.0.1
     password: redis
     port: 6379
+    lettuce:
+      pool:
+        max-active: -1 #负数表示没有限制
+        max-idle: 32  #最大空闲连接数
+        min-idle: 4 #最小空闲连接数
+        max-wait: 100ms  #连接池最大阻塞等待时间
